tests/Core/negative/parsing/test007.jvc
def f : Int := 0;

def f : Int;
